--- a/layouts/partials/svg-personal.html
+++ b/layouts/partials/svg-personal.html
@@ -12,7 +12,7 @@
 <img src="./logo/plex.png" height="25" width="25">
 {{- else if (eq .name "transmission") -}}
 <img src="./logo/transmission.png" height="25" width="25">
-{{- else if (eq .name "transmission2") -}}
+{{- else if (eq .name "download") -}}
 <img src="./logo/transmission2.png" height="25" width="25">
 {{- else if (eq .name "irc") -}}
 <img src="./logo/irc.png" height="25" width="25">
@@ -28,8 +28,8 @@
 <img src="./logo/kube.png" height="25" width="25">
 {{- else if (eq .name "grafana") -}}
 <img src="./logo/grafana.png" height="25" width="25">
-{{- else if (eq .name "grafana2") -}}
-<img src="./logo/grafana2.png" height="25" width="25">
+{{- else if (eq .name "monitoring") -}}
+<img src="./logo/monitoring.png" height="25" width="25">
 {{- else if (eq .name "rclone") -}}
 <img src="./logo/rclone.png" height="25" width="25">
 {{- else if (eq .name "backup") -}}
