--- a/layouts/partials/svg-personal.html
+++ b/layouts/partials/svg-personal.html
@@ -18,7 +18,7 @@
 <img src="./logo/irc.png" height="25" width="25">
 {{- else if (eq .name "haproxy") -}}
 <img src="./logo/haproxy.png" height="25" width="25">
-{{- else if (eq .name "cloud") -}}
+{{- else if (eq .name "nextcloud") -}}
 <img src="./logo/nextcloud.png" height="25" width="25">
 {{- else if (eq .name "rancher") -}}
 <img src="./logo/rancher.png" height="25" width="25">
